[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
sdk = { workspace = true }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
contract-orderbook-app = { path = "../contract", package = "contract-orderbook-app"}
contract-token = { path = "../../examples/simple-token/contract", package = "contract" }
contract-identity = { path = "../../examples/simple-identity/contract" }
methods = { path = "../methods", package="orderbook-methods"}
methods-identity = { path = "../../examples/simple-identity/methods"}
methods-token = { path = "../../examples/simple-token/methods", package = "methods"}
risc0-zkvm = { version = "1.2.0" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
serde_json = "1.0.133"
clap = { version = "4.5.23", features = ["derive"] }
bincode = { version = "2.0.0-rc.3" }
hex = "0.4.3"
anyhow = "1.0.95"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
reqwest = "0.12.9"
borsh = "1.5.3"